[package]
name = "wasm-cipher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes = "0.7.5"
sha2 = "0.9.8"
base64 = "0.13.0"
wasm-bindgen = "0.2"
block-modes = "0.8.1"
getrandom = { version = "0.2", features = ["js"]}
